# color-picker

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
assets/: color-picker.desktop
src/: ColorMath.h  ColorPicker.cpp  ColorPicker.h  ColorSlot.cpp  ColorSlot.h  ColorWheelDialog.cpp  ColorWheelDialog.h  ColorWheelWidget.cpp  ColorWheelWidget.h  ComparisonPanel.cpp  ComparisonPanel.h  MainWindow.cpp  MainWindow.h  PickerOverlay.cpp  PickerOverlay.h  WaylandPortalPicker.cpp  WaylandPortalPicker.h  main.cpp
